# ai-cad-surf

./: .gitignore  Justfile  README.md  pyproject.toml
configs/: train_digs.yaml  train_ncr-fd.yaml  train_ncr.yaml  train_nsh-fd.yaml  train_nsh.yaml  train_odw-fd.yaml  train_odw.yaml
src/: mesh_extractor.py  preprocess_data.py  train.py
src/datasets/: reconstruction.py  sampling.py
src/losses/: __init__.py  digs_loss.py  neur_cad_recon_fd_loss.py  neur_cad_recon_loss.py  neural_singular_hessian_fd_loss.py  neural_singular_hessian_loss.py  odw_loss.py  term.py
src/models/: activations.py  decoder.py  initializations.py  math.py  operations.py  pointnet.py  resnet.py  vae.py
src/utils/: __init__.py  evaluation.py  logging.py  math.py  multiproc.py  setup.py  visualizations.py
